Conform to new categories <ferret#4507577>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -31,7 +31,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 *Estonian: [[tuhkur]], [[tőhk]]
 *Finnish: [[fretti]]
 *French: [[furet]] {{m}}
-*[[Frisian]]: [[fret]]
+*[[West Frisian]]: [[fret]]
 *[[Friulian]]: [[pudîs blanc]]
 *[[Galician]]: [[furón]]
 *German: [[Frettchen]] {{n}}
