Conform to new categories <dormouse#4507580>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -29,7 +29,7 @@ Unknown origin, though came to be associated with French [[dormire]] ‘sleep’
 * Faroese: [[heslimús]]
 * Finnish: [[unikeko]]
 * French: [[loir]] {{m}}
-* [[Frisian]]: [[sânslieper]]
+* [[West Frisian]]: [[sânslieper]]
 * [[Friulian]]: [[glîr]]
 * [[Gallegan]]: [[leirón cincento]]
 * German: [[Bilch]] {{m}}, [[Schläfer]] {{m}}, [[Schlafmaus]] {{f}}
