Conform to new categories <muskrat#4507583>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -33,7 +33,7 @@
 *[[Faeroese]]: [[moskusrotta]]
 *Finnish: [[piisami]]
 *French: [[rat musqué]] {{m}}
-*[[Frisian]]: [[muskusrôt]]
+*[[West Frisian]]: [[muskusrôt]]
 *[[Gallegan]]: [[aguaneira]]
 *German: [[Bisamratte]] {{f}}
 *Greek: [[μοσχοπόντικας]]
