--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -25,7 +25,7 @@
 *Estonian: [[muflon]]
 *Finnish: [[mufloni]]
 *French: [[mouflon]] {{m}}
-*[[Frisian]]: [[moeflon]]
+*[[West Frisian]]: [[moeflon]]
 *[[Friulian]]: [[muflon]]
 *[[Galician]]: [[muflón]]
 *German: [[Mufflon]] {{m}}
