--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -181,9 +181,12 @@ Latin [[milium]]
 * {{IPA|lang=ga|[mʲiːlʲ]}} or {{IPAchar|[mʲɪlʲ]}}
 
 ===Verb===
-{{infl|ga|verb|present|milleann|past|mhill|future|millfidh|conditional|mhillfeadh|past participle|millte|verbal noun|milleadh}}
+{{ga-verb}}
 
 # To [[spoil]]
+
+====Conjugation====
+{{ga-verb-conj 1a|m|il|l|q=slender}}
 
 ====Mutation====
 {{ga mut cons|m|ill}}
