sorted/rebalanced translations, template -trans-bot +trans-bottom <thing#4510568>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -46,8 +46,8 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Bosnian: {{t-|bs|stvar|f}}
 * [[Breton]]: [[tra]] {{f}}
 * Bulgarian: [[нещо]] (nešto) {{n}}, [[предмет]] (predmet) {{m}}, [[вещ]] (vešt) {{f}}
-* [[Catalan]]: [[cosa]] {{f}}
 * CJKV Characters: [[物]], [[事]]
+* [[Catalan]]: [[cosa]] {{f}}
 * Chinese:
 *: Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
 *: Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
@@ -59,7 +59,6 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Estonian: {{t-|et|asi}}, {{t-|et|ese}}
 * Finnish: {{t+|fi|asia}}
 * French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
-* [[West Frisian]]: [[ding]] {{n}}
 * [[Galician]]: [[cousa]] {{f}}
 * Georgian: [[ნივთი]] (nivt‘i), [[საგანი]] (sagani)
 * German: {{t+|de|Ding|n}}
@@ -74,8 +73,8 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * [[Ido]]: [[kozo]]
 * Indonesian: [[benda]], [[barang]], [[makhluk]]
 * [[Interlingua]]: [[cosa]]
-{{trans-mid}}
 * Irish: {{t-|ga|rud|m|xs=Irish}}, {{t-|ga|ní|m|xs=Irish}}
+{{trans-mid}}
 * Italian: {{t+|it|cosa|f}}
 * Japanese: [[事]] ([[こと]], koto)
 * Korean: [[물건]] (mulgeon)
@@ -110,6 +109,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 * Urdu: {{ur-Arab|[[وستو]]}} (vastū) {{m}}, {{ur-Arab|[[چیز]]}} (ćīz) {{f}}
 * {{trreq|Vietnamese}}
 * Welsh: {{t-|cy|peth|m|xs=Welsh}}
+* [[West Frisian]]: [[ding]] {{n}}
 * Yiddish: [[זאַך]] (zakh) {{f}}, [[חפֿץ]] (kheyfets) {{m}}
 {{trans-bottom}}
 
@@ -175,7 +175,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 
 {{checktrans-top}}
 * {{ttbc|Sinhala}}: [[දෙය]] (deya)
-{{trans-bot}}
+{{trans-bottom}}
 
 ====Derived terms====
 {{top2}}
