--- a/en/月/月.4427.wikitext
+++ b/en/月/月.4427.wikitext
@@ -11,6 +11,9 @@ Pictographic representation, originally of the crescent moon.
 # [[month]]
 # KangXi radical 74 [[Index:Chinese radical/月|月]]
 
+====Usage notes====
+As part of a character the pictograph 月 is also used to stand for [[Index:Chinese radical/肉|肉]].
+
 ====References====
 * {{Han ref|kx=0504.190|dkj=14330|dj=0879.200|hdz=32041.010|uh=6708|ud=26376|bh=A4EB|bd=42219}}
 
