--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -11,32 +11,33 @@
 Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be varieties of a single language called “'''Frisian'''”.  Other linguists and the speakers consider them to be separate languages in a language group called “'''Frisian'''”.
 
 ====Translations====
+{{rfc-tsort|unknown line format:  länsifriisi länsifriisin   murre }}
 {{trans-top|language spoken in Friesland}}
 * Chinese:
-*:Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
+*: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
 * Finnish: [[länsifriisi]], *German: [[Friesisch]] {{n}}
 [[länsifriisi|länsifriisin]] [[murre]]
 {{trans-mid}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
-*West Frisian: {{tø|fry|Frysk}}
+* West Frisian: {{tø|fry|Frysk}}
 {{trans-bottom}}
 
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
-{{trans-mid}}
 * Italian: dialetto frisone occidentale (ad hoc)
+{{trans-mid}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
 {{trans-bottom}}
 
 {{checktrans}}
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
-*{{ttbc|Esperanto}}: [[frizona]]
-*{{ttbc|French}}: [[frison]] {{m}}
-*{{ttbc|Icelandic}}: [[frísneska]] {{f}}
-*{{ttbc|Spanish}}: [[frisón]] {{m}}
-*{{ttbc|Swedish}}: [[frisiska]] {{c}}
+* {{ttbc|Esperanto}}: [[frizona]]
+* {{ttbc|French}}: [[frison]] {{m}}
+* {{ttbc|Icelandic}}: [[frísneska]] {{f}}
+* {{ttbc|Spanish}}: [[frisón]] {{m}}
+* {{ttbc|Swedish}}: [[frisiska]] {{c}}
 
 ===See also===
 * {{pedialite|West Frisian language}}
