--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -11,13 +11,11 @@
 Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be varieties of a single language called “'''Frisian'''”.  Other linguists and the speakers consider them to be separate languages in a language group called “'''Frisian'''”.
 
 ====Translations====
-{{rfc-tsort|unknown line format:  länsifriisi länsifriisin   murre }}
 {{trans-top|language spoken in Friesland}}
 * Chinese:
 *: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
-* Finnish: [[länsifriisi]], *German: [[Friesisch]] {{n}}
-[[länsifriisi|länsifriisin]] [[murre]]
+*German: [[Friesisch]] {{n}}
 {{trans-mid}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
@@ -35,6 +33,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
 * {{ttbc|Esperanto}}: [[frizona]]
 * {{ttbc|French}}: [[frison]] {{m}}
+* {{rrbc|Finnish}}: [[länsifriisi]], [[länsifriisi|länsifriisin]] [[murre]]
 * {{ttbc|Icelandic}}: [[frísneska]] {{f}}
 * {{ttbc|Spanish}}: [[frisón]] {{m}}
 * {{ttbc|Swedish}}: [[frisiska]] {{c}}
