--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -33,7 +33,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
 * {{ttbc|Esperanto}}: [[frizona]]
 * {{ttbc|French}}: [[frison]] {{m}}
-* {{rrbc|Finnish}}: [[länsifriisi]], [[länsifriisi|länsifriisin]] [[murre]]
+* {{ttbc|Finnish}}: [[länsifriisi]], [[länsifriisi|länsifriisin]] [[murre]]
 * {{ttbc|Icelandic}}: [[frísneska]] {{f}}
 * {{ttbc|Spanish}}: [[frisón]] {{m}}
 * {{ttbc|Swedish}}: [[frisiska]] {{c}}
