--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -15,7 +15,8 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Chinese:
 *: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
-*German: [[Friesisch]] {{n}}
+* Finnish: [[länsifriisi]]
+* German: [[Friesisch]] {{n}}
 {{trans-mid}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
@@ -24,6 +25,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 
 {{trans-top|the Western Frisian dialect of Dutch}}
 * Dutch: {{t|nl|West-Fries}}
+* Finnish: [[länsifriisi|länsifriisiläinen]] [[murre]]
 * Italian: dialetto frisone occidentale (ad hoc)
 {{trans-mid}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
@@ -33,7 +35,6 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 Please distinguish between the Frisian language group, the West Frisian language (sometimes known as "Frisian"), and the West Frisian dialect.
 * {{ttbc|Esperanto}}: [[frizona]]
 * {{ttbc|French}}: [[frison]] {{m}}
-* {{ttbc|Finnish}}: [[länsifriisi]], [[länsifriisi|länsifriisin]] [[murre]]
 * {{ttbc|Icelandic}}: [[frísneska]] {{f}}
 * {{ttbc|Spanish}}: [[frisón]] {{m}}
 * {{ttbc|Swedish}}: [[frisiska]] {{c}}
