/* Translations */ Belarussian -> Belarusian <mouflon#4515764>

--- a/en/m/mouflon.8242.wikitext
+++ b/en/m/mouflon.8242.wikitext
@@ -13,7 +13,7 @@
 {{trans-top|sheep}}
 * Albanian: [[mufloni]]
 * [[Basque]]: [[mufloi]]
-* [[Belarussian]]: [[муфлон]]
+* Belarusian: [[муфлон]]
 * [[Breton]]: [[mouflon]]
 * Bulgarian: [[муфлон]] ([[muflon]])
 * [[Catalan]]: [[mufló]]
