ttbc fy <weasel#4518743>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -33,10 +33,12 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 * Latvian: [[zebiekste]] {{f}}
 * Polish: {{t+|pl|łasica|f}}
 * Russian: {{t+|ru|ласка|f|tr=láska|sc=Cyrl}}
+* West Frisian: {{t+|fy|wezeling|c}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the genus Mustela}}
 * Japanese: [[イタチ属]] (itachi-zoku)
+* West Frisian: {{t+|fy|marter|c}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family Mustelidae}}
@@ -57,7 +59,6 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 *{{ttbc|Croatian}}: [[lasica]]
 *{{ttbc|Esperanto}}: [[mustelo]]
 *{{ttbc|French}}: [[belette]] {{f}}
-*{{ttbc|Frisian}}: [[wezeling]]
 *{{ttbc|Friulian}}: [[bilite]]
 *{{ttbc|Galician}}: [[donicela]], [[denociña]]
 *{{ttbc|German}}: [[Wiesel]] {{n}}
