checktrans and trans-top to checktrans-top, sorted/rebalanced translations <weasel#4518811>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -8,9 +8,9 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 
 ===Pronunciation===
 * {{IPA|/'wiːzəl/}}
-*{{audio|en-us-weasel.ogg|Audio (US)}}
+* {{audio|en-us-weasel.ogg|Audio (US)}}
 
-*Rhymes: [[Rhymes:English:-iːzəl|-iːzəl]]
+* Rhymes: [[Rhymes:English:-iːzəl|-iːzəl]]
 
 ===Noun===
 {{wikipedia}}
@@ -38,93 +38,95 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 
 {{trans-top|any mammal of the genus Mustela}}
 * Japanese: [[イタチ属]] (itachi-zoku)
+{{trans-mid}}
 * West Frisian: {{t+|fy|marter|c}}
 {{trans-bottom}}
 
 {{trans-top|any mammal of the family Mustelidae}}
 * Finnish: {{t-|fi|näätäeläin}}
+{{trans-mid}}
 * Japanese: [[イタチ科]] (itachi-ka)
 {{trans-bottom}}
 
-{{checktrans}}
-{{trans-top|translations to be checked}}
-*{{ttbc|Albanian}}: [[nuse e lalës]]
-*{{ttbc|Basque}}: [[erbinude]]
-*{{ttbc|Belarusian}}: [[ласка]]
-*{{ttbc|Bosnian}}: [[lasica]] {{f}}
-*{{ttbc|Breton}}: [[kaerell]]
-*{{ttbc|Bulgarian}}: [[невестулка]] ([[nevestulka]])
-*{{ttbc|Catalan}}: [[mostela]] {{f}}
-*{{ttbc|Chinese}}: [[黄鼠狼]]
-*{{ttbc|Croatian}}: [[lasica]]
-*{{ttbc|Esperanto}}: [[mustelo]]
-*{{ttbc|French}}: [[belette]] {{f}}
-*{{ttbc|Friulian}}: [[bilite]]
-*{{ttbc|Galician}}: [[donicela]], [[denociña]]
-*{{ttbc|German}}: [[Wiesel]] {{n}}
-*{{ttbc|Hungarian}}: [[menyét]]
-*{{ttbc|Icelandic}}: [[hreysiköttur]], [[vesla]]
-*{{ttbc|Indonesian}}: [[luwak]]
-*{{ttbc|Irish}}: [[bláthnaid ghallda]]
-*{{ttbc|Italian}}: [[donnola]] {{f}}
-*{{ttbc|Korean}}: [[족제비]] (jokjebi)
+{{checktrans-top}}
+* {{ttbc|Albanian}}: [[nuse e lalës]]
+* {{ttbc|Basque}}: [[erbinude]]
+* {{ttbc|Belarusian}}: [[ласка]]
+* {{ttbc|Bosnian}}: [[lasica]] {{f}}
+* {{ttbc|Breton}}: [[kaerell]]
+* {{ttbc|Bulgarian}}: [[невестулка]] ([[nevestulka]])
+* {{ttbc|Catalan}}: [[mostela]] {{f}}
+* {{ttbc|Chinese}}: [[黄鼠狼]]
+* {{ttbc|Croatian}}: [[lasica]]
+* {{ttbc|Esperanto}}: [[mustelo]]
+* {{ttbc|French}}: [[belette]] {{f}}
+* {{ttbc|Friulian}}: [[bilite]]
+* {{ttbc|Galician}}: [[donicela]], [[denociña]]
+* {{ttbc|German}}: [[Wiesel]] {{n}}
+* {{ttbc|Hungarian}}: [[menyét]]
+* {{ttbc|Icelandic}}: [[hreysiköttur]], [[vesla]]
+* {{ttbc|Indonesian}}: [[luwak]]
+* {{ttbc|Irish}}: [[bláthnaid ghallda]]
+* {{ttbc|Italian}}: [[donnola]] {{f}}
+* {{ttbc|Korean}}: [[족제비]] (jokjebi)
 {{trans-mid}}
-*{{ttbc|Ladin}}: [[belora]]
-*{{ttbc|Latin}}: [[mustela#Latin|mustela]]
-*{{ttbc|Lithuanian}}: [[žebenkštis]]
-*{{ttbc|Lower Sorbian}}: [[łasyca]], [[łasycka]]
-*{{ttbc|Macedonian}}: [[ласица]] {{f}}
-*{{ttbc|Maltese}}: [[ballottra]]
-*{{ttbc|Norwegian}}: [[snømus]], [[vesel]]
-*{{ttbc|Occitan}}: [[mostèla]], [[polida]]
-*{{ttbc|Portuguese}}: [[doninha]]
-*{{ttbc|Romanian}}: [[nevăstuică]] {{f}}
-*{{ttbc|Romansh}}: [[mustaila]]
-*{{ttbc|Romany}}: [[boriori]] {{f}}
-*{{ttbc|Sami}}: [[nirpi]]
-*{{ttbc|Sardinian}}: [[bucca de mele]], [[bucchemeli]]
-*{{ttbc|Scottish Gaelic}}: [[neas bheag]]
-*{{ttbc|Serbian}}: [[ласица]] ([[lasica]])
-*{{ttbc|Slovak}}: [[lasica]]
-*{{ttbc|Slovenian}}: [[podlasica]] {{f}}
-*{{ttbc|Spanish}}: [[comadreja]] {{f}}, [[mostela]] {{f}}
-*{{ttbc|Swedish}}: [[vessla]]
-*{{ttbc|Turkish}}: [[gelincik]]
-*{{ttbc|Ukrainian}}: [[ласиця]] ([[lasicja]])
-*{{ttbc|Upper Sorbian}}: [[kohlica]]
-*{{ttbc|Welsh}}: [[bronwen]], [[gwenci]]
+* {{ttbc|Ladin}}: [[belora]]
+* {{ttbc|Latin}}: [[mustela#Latin|mustela]]
+* {{ttbc|Lithuanian}}: [[žebenkštis]]
+* {{ttbc|Lower Sorbian}}: [[łasyca]], [[łasycka]]
+* {{ttbc|Macedonian}}: [[ласица]] {{f}}
+* {{ttbc|Maltese}}: [[ballottra]]
+* {{ttbc|Norwegian}}: [[snømus]], [[vesel]]
+* {{ttbc|Occitan}}: [[mostèla]], [[polida]]
+* {{ttbc|Portuguese}}: [[doninha]]
+* {{ttbc|Romanian}}: [[nevăstuică]] {{f}}
+* {{ttbc|Romansh}}: [[mustaila]]
+* {{ttbc|Romany}}: [[boriori]] {{f}}
+* {{ttbc|Sami}}: [[nirpi]]
+* {{ttbc|Sardinian}}: [[bucca de mele]], [[bucchemeli]]
+* {{ttbc|Scottish Gaelic}}: [[neas bheag]]
+* {{ttbc|Serbian}}: [[ласица]] ([[lasica]])
+* {{ttbc|Slovak}}: [[lasica]]
+* {{ttbc|Slovenian}}: [[podlasica]] {{f}}
+* {{ttbc|Spanish}}: [[comadreja]] {{f}}, [[mostela]] {{f}}
+* {{ttbc|Swedish}}: [[vessla]]
+* {{ttbc|Turkish}}: [[gelincik]]
+* {{ttbc|Ukrainian}}: [[ласиця]] ([[lasicja]])
+* {{ttbc|Upper Sorbian}}: [[kohlica]]
+* {{ttbc|Welsh}}: [[bronwen]], [[gwenci]]
 {{trans-bottom}}
 
 ===Verb===
 {{en-verb|weasels|'''[[weaseling]]''' or '''[[weaselling]]'''|'''[[weaseled]]''' or '''[[weaselled]]'''|'''[[weaseled]]''' or '''[[weaselled]]'''}}
 
 # To benefit by clever or devious means, esp. to escape a commitment (from the supposed cunningness of the weasel).
-:''To weasel out of doing something''
-:''To weasel something out of somebody''
+: ''To weasel out of doing something''
+: ''To weasel something out of somebody''
 
 ====Usage notes====
-* Weaseling and weaseled are more common in the US.  Weaselling and weaselled are more common in the UK.  
+* Weaseling and weaseled are more common in the US.  Weaselling and weaselled are more common in the UK.
 
 ====Translations====
 {{trans-top|to weasel out of doing something}}
 * Finnish: [[lusmuilla]], [[kiemurrella]]
+* Polish: [[wykręcić się]]
 {{trans-mid}}
-* Polish: [[wykręcić się]] 
 * Russian: [[увиливать]] (uvílivat') {{impf}}, [[увильнуть]] (uvil'nút') {{pf}}
 {{trans-bottom}}
 
 {{trans-top|to weasel something out of somebody}}
 * Finnish: [[huiputtaa]], [[kieroilla]]
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Derived terms===
-*[[weasel words]]
+* [[weasel words]]
 
 ===See also===
-*[[ferret]]
-*[[mink]]
-*[[polecat]]
-*[[stoat]]
+* [[ferret]]
+* [[mink]]
+* [[polecat]]
+* [[stoat]]
 
 [[Category:Mammals]]
 
