--- a/en/b/beheld.6791.wikitext
+++ b/en/b/beheld.6791.wikitext
@@ -11,6 +11,7 @@
 ====Translations====
 {{trans-top|simple past of "behold"}}
 * Dutch: [[aanschouwde]]
+{{trans-mid}}
 {{trans-bottom}}
 
 ===Verb===
@@ -21,6 +22,7 @@
 ====Translations====
 {{trans-top|past participle of "behold"}}
 * Dutch: [[aanschouwd]]
+{{trans-mid}}
 {{trans-bottom}}
 
 [[hu:beheld]]
