--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -85,6 +85,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 {{trans-top|Latinate singular grammatical number suffix}}
 *Dutch: {{t-|nl|-um}}
 *French: {{t+|fr|-um}}
+*German: [[-um]]
 *Greek: {{t|el|-ο|tr=-o}}, {{t|el|-ον|tr=-on}}
 *Italian: {{t-|it|-o}}, {{t+|it|-a}}
 {{trans-mid}}
