--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -19,6 +19,7 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 {{trans-mid}}
 * German: [[Friesisch]] {{n}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
+* Japanese: {{t|ja|フリジア語|tr=Furijia-go|sc=Jpan}}, {{t|ja|フリース語|Furīsu-go|sc=Jpan}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
 * West Frisian: {{tø|fry|Frysk}}
 {{trans-bottom}}
