--- a/en/h/hairnet.34110.wikitext
+++ b/en/h/hairnet.34110.wikitext
@@ -12,10 +12,16 @@
 # A [[net]] designed to [[keep]] [[hair]] up and out of the way. (used, e.g., while cooking)
 
 ====Translations====
+{{trans-top|net designed to keep hair up}}
 *Dutch: [[haarnetje]] {{n}}
 *German: [[Haarnetz]] {{n}}
 *[[Interlingua]]: [[rete]] pro le [[capillos]]
+{{trans-mid}}
 *Portuguese: [[rede]] para os [[cabelos]] {{f}}
+*Spanish: {{t+|es|redecilla|f}}
+{{trans-bottom}}
+
+[[Category:Hair]]
 
 [[de:hairnet]]
 [[zh:hairnet]]
