--- a/en/a/abandono.4114.wikitext
+++ b/en/a/abandono.4114.wikitext
@@ -18,7 +18,7 @@
 # [[abandoning]], [[abandonment]]
 
 ====Derivation====
-From [[abandona]], to [[abandon}}.
+From [[abandona]], to [[abandon]].
 
 Root: [[abandon-]].
 
