--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -43,7 +43,7 @@
 * Danish: [[på]]
 * Dutch: [[op]], [[bij]]
 * Esperanto: [[sur#Esperanto|sur]]
-* [[Faeroese]]: [[í]] / [[á]] / [[hjá]] / [[til]]
+* [[Faroese]]: [[í]] / [[á]] / [[hjá]] / [[til]]
 * Finnish: [[-lla]] / [[-llä]] ''([[adessive case]])''; <br> [[-ssa]] / [[-ssä]] ''([[inessive case]])''
 * French: [[à]], [[en#French|en]]
 * German: [[an#German|an]], [[auf]], [[bei]], [[in#German|in]]
@@ -126,7 +126,7 @@
 * Danish: [[til]]
 * Dutch: [[op]]
 * Esperanto: [[al#Esperanto|al]]
-* [[Faeroese]]: [[eftir]] ''([[dative case]])''
+* [[Faroese]]: [[eftir]] ''([[dative case]])''
 * Finnish: [[-lle]] ''([[allative case]])''; [[kohti]]
 * French: [[à]]
 * German: [[nach]], [[zu]]
