--- a/en/ι/Ισραήλ.4257.wikitext
+++ b/en/ι/Ισραήλ.4257.wikitext
@@ -1,10 +1,10 @@
 ==Greek==
 
 ===Pronunciation===
-[[ancient]] [isra'ε:l], [[modern]] [iza'il]
+*{{IPA|[iza'il]}}
 
 ===Proper noun===
-'''ισραήλ'''
+{{infl|el|proper noun}}
 
 # The [[patriarch]] [[Israel]].
 # The [[Hebrew]] [[people]], the [[child|children]] of [[Israel]].
