--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 {{en-noun|-}}
-# The state of being [[unselfish]].
+# To be generous or altruistic.
 
 [[it:unselfishness]]
 [[te:unselfishness]]
