--- a/en/u/unselfishness.742253.wikitext
+++ b/en/u/unselfishness.742253.wikitext
@@ -1,7 +1,7 @@
 ==English==
 ===Noun===
 {{en-noun|-}}
-# To be generous or altruistic.
+# The state of being [[unselfish]].
 
 [[it:unselfishness]]
 [[te:unselfishness]]
