wellington <due course#4543590>

--- a/en/d/due course.801536.wikitext
+++ b/en/d/due course.801536.wikitext
@@ -1,7 +1,6 @@
 ==English==
 
-{{rft|Is this an idiom? or Is only "in due course" an idiom?}}
-===Idiom===
+===Noun===
 {{en-noun|sg=[[due]] [[course]]}}
 
 # {{idiom}} Regular or appropriate passage or occurrence
@@ -17,3 +16,5 @@
 #*: […] but it did not oppress them by any means so long; and, after a '''due course''' of useless conjecture, that “it was a strange business, and that he must be a very strange man,” grew enough for all their indignation and wonder; […].
 #* '''1850''', Nathaniel Hawthorne, ''The Scarlet Letter''
 #*: Day by day, nevertheless, their sour and rigid wrinkles were relaxing into something which, in the '''due course''' of years, might grow to be an expression of almost benevolence.
+#* '''1898''', Justin McCarthy, ''The Story of Gladstone's Life'', page 27
+#*: The Reform Bill, although the Duke of Wellington described it as " a revolution by '''due course''' of law," set up in fact but a very limited suffrage, [....]
