--- a/en/m/macrocephalus.801848.wikitext
+++ b/en/m/macrocephalus.801848.wikitext
@@ -1,2 +1,53 @@
+{{see|Macrocephalus}}
+==Translingual==
+
+===Noun===
+'''macrocephalus'''
+
+# {{taxonomy}} The [[specific name]] of certain species.
+# {{taxonomy}} The [[subspecific name]] of certain subspecies.
+
+====Derived terms====
+{{top3}}
+* ''[[Atopochilus macrocephalus]]''
+* ''[[Cebus apella macrocephalus]]''
+* ''[[Clarias macrocephalus]]''
+* ''[[Cnidoglanis macrocephalus]]''
+* ''[[Conger macrocephalus]]''
+* ''[[Cyperus macrocephalus]]''
+* ''[[Gadus macrocephalus]]''
+* ''[[Gobius macrocephalus]]''
+* ''[[Gonocephalus macrocephalus]]''
+* ''[[Hypalastoroides macrocephalus]]''
+{{mid3}}
+* ''[[Kryptopterus macrocephalus]]''
+* ''[[Leporinus macrocephalus]]''
+* ''[[Limnonectes macrocephalus]]''
+* ''[[Macrocephalites macrocephalus]]''
+* ''[[Melamphaes macrocephalus]]''
+* ''[[Mogrus macrocephalus]]''
+* ''[[Mormyrus macrocephalus]]''
+* ''[[Mylio macrocephalus]]''
+* ''[[Oreopanax macrocephalus]]''
+* ''[[Pennahia macrocephalus]]''
+{{mid3}}
+* ''[[Physeter macrocephalus]]''
+* ''[[Pontinus macrocephalus]]''
+* ''[[Pothos macrocephalus]]''
+* ''[[Psychrolutes macrocephalus]]''
+* ''[[Ptilotus macrocephalus]]''
+* ''[[Scleropages macrocephalus]]''
+* ''[[Sinocyclocheilus macrocephalus]]''
+* ''[[Synodus macrocephalus]]''
+* ''[[Tachyoryctes macrocephalus]]''
+* ''[[Uropterygius macrocephalus]]''
+{{bottom}}
+
+----
+
 ==English==
-{{alternative spelling of|macrocephalous}}
+
+===Adjective===
+{{en-adj|-}}
+
+# {{alternative spelling of|[[macrocephalous]]}}
