--- a/en/b/bare-butt.741632.wikitext
+++ b/en/b/bare-butt.741632.wikitext
@@ -9,13 +9,12 @@
 # literally, with the [[butt]] [[bared]], as for a [[spanking]] or a [[mooning]]
 # by extension, [[stark naked]].
 
-===Synonyms===
+====Synonyms====
 * [[bare-arse]]
 * [[bare-bum]]
 * [[bare-balls]]
 
-===Translations===
-{{rfc-level|Translations at L3+ (AutoFormat would have corrected level of Synonyms)}}
+====Translations====
 * [[Afrikaans]]: [[kaalgat]]
 * French: [[cul-nu]], [[nu-le-cul]]
 
