/* Translations */ balanced { <pig#4549777>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -175,7 +175,7 @@
 {{trans-bottom}}
 
 {{trans-top|cast metal block}}
-* Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {f}}
+* Russian: [[чушка]] (čúška), [[болванка]]  (bolvánka) {{f}}
 {{trans-mid}}
 {{trans-bottom}}
 
