iwiki +ko, oc <abandonar#4551800>

--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -59,6 +59,7 @@
 [[es:abandonar]]
 [[fr:abandonar]]
 [[gl:abandonar]]
+[[ko:abandonar]]
 [[hy:abandonar]]
 [[hr:abandonar]]
 [[io:abandonar]]
@@ -66,6 +67,7 @@
 [[ie:abandonar]]
 [[it:abandonar]]
 [[hu:abandonar]]
+[[oc:abandonar]]
 [[pl:abandonar]]
 [[pt:abandonar]]
 [[ro:abandonar]]
