/* Etymology */ +sa, ang cognates <κύων#4552294>

--- a/en/κ/κύων.4255.wikitext
+++ b/en/κ/κύων.4255.wikitext
@@ -1,7 +1,7 @@
 ==Ancient Greek==
 
 ===Etymology===
-From {{proto|Indo-European|ḱwṓ|lang=grc}}, cognate with [[hound]], Latin [[canis]], German [[Hund]].
+From {{proto|Indo-European|ḱwṓ|lang=grc}}. Cognates include Latin {{term|canis|lang=la}}, Sanskrit {{term|sc=Deva|श्वन्|tr=śván|lang=sa}} and Old English {{term|hund|lang=ang}} (English {{term|hound}}).
 
 ===Pronunciation===
 {{grc-ipa-rows|kj|u'|oo|n}}
