--- a/en/t/theory.7354.wikitext
+++ b/en/t/theory.7354.wikitext
@@ -78,7 +78,7 @@ English since 1613, from French ''[[théorie]]'' < Latin ''[[theoria]]'' < Greek
 
 ====Translations====
 {{trans-top|an unproven conjecture}}
-* Arabic: {{Arab|[[نظرية]]}} {{unicode|(naʐaríya)}} {{f
+* Arabic: {{Arab|[[نظرية]]}} {{unicode|(naʐaríya)}} {{f}}
 * Croatian: {{t-|hr|teorija|f}}
 * Dutch: {{t+|nl|theorie}}
 * Finnish: {{t-|fi|teoria}}
