iwiki +lo, th <advertisement#4553737>

--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -90,6 +90,7 @@
 [[id:advertisement]]
 [[it:advertisement]]
 [[kk:advertisement]]
+[[lo:advertisement]]
 [[li:advertisement]]
 [[hu:advertisement]]
 [[nl:advertisement]]
@@ -100,6 +101,7 @@
 [[fi:advertisement]]
 [[sv:advertisement]]
 [[ta:advertisement]]
+[[th:advertisement]]
 [[vi:advertisement]]
 [[tr:advertisement]]
 [[uk:advertisement]]
