iwiki +lo, th <again#4554034>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -132,6 +132,7 @@
 [[it:again]]
 [[kk:again]]
 [[ku:again]]
+[[lo:again]]
 [[li:again]]
 [[hu:again]]
 [[nl:again]]
@@ -143,6 +144,7 @@
 [[fi:again]]
 [[ta:again]]
 [[te:again]]
+[[th:again]]
 [[vi:again]]
 [[tr:again]]
 [[uk:again]]
