--- a/en/a/apparent brightness.855921.wikitext
+++ b/en/a/apparent brightness.855921.wikitext
@@ -4,3 +4,5 @@
 {{en-noun|sg=[[apparent]] [[brightness]]|apparent brightnesses}}
 
 #{{astronomy}} The [[brightness]] of a star as measured by an [[observer]], as opposed to its [[intrinsic brightness]] when corrected for distance or absorption.
+
+[[ta:apparent brightness]]
