iwiki +th <attend#4562030>

--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -63,5 +63,6 @@ From {{OF.}} ''[[atendre]]'' ({{F.}} ''[[attendre]]'').
 [[fi:attend]]
 [[ta:attend]]
 [[te:attend]]
+[[th:attend]]
 [[vi:attend]]
 [[zh:attend]]
