--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -159,6 +159,7 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 [[Category:English irregular past participles]]
 [[Category:English irregular simple past forms]]
 [[Category:English words with multiple etymologies]]
+[[Category:Gaits]]
 
 [[ar:bound]]
 [[et:bound]]
