--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -4,10 +4,10 @@
 {{rank|expression|Duke|battle|736|bound|York|impossible|greatest}}
 
 ===Pronunciation===
-*{{SAMPA|/"baUnd/}}
-*{{IPA|/ˈbaʊnd/}}
-*{{audio|en-us-bound.ogg|Audio (US)}}
-*:Rhymes: [[Rhymes:English:-aʊnd|-aʊnd]]
+* {{SAMPA|/"baUnd/}}
+* {{IPA|/ˈbaʊnd/}}
+* {{audio|en-us-bound.ogg|Audio (US)}}
+*: Rhymes: [[Rhymes:English:-aʊnd|-aʊnd]]
 
 ===Etymology 1===
 
@@ -30,45 +30,46 @@
 
 =====Translations=====
 {{trans-top|border of territory}}
-* German: {{t|de|Abgrenzung|f}}
 * Finnish: {{t+|fi|raja}}
+* German: {{t|de|Abgrenzung|f}}
 {{trans-mid}}
 * Swedish: {{t+|sv|gräns|c}}
 {{trans-bottom}}
 
 {{trans-top|value greater (or smaller) than a given set}}
-* German: {{t+|de|Schranke|f}}
 * Finnish: {{t-|fi|raja-arvo}}
+* German: {{t+|de|Schranke|f}}
 {{trans-mid}}
 * Swedish: {{t+|sv|gräns|c}}
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Dutch}}: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
-*{{ttbc|Spanish}}: [[acotado]]
-*{{ttbc|Telugu}}: పరిధి
+* {{ttbc|Dutch}}: [[limiet]] (1), [[grens]] (1), [[landpaal]] (1)
+* {{ttbc|Spanish}}: [[acotado]]
+* {{ttbc|Telugu}}: పరిధి
 {{checktrans-bottom}}
 
 =====Derived terms=====
-*[[boundary]]
-*[[least upper bound]]
-*[[lower bound]]
-*[[out of bounds]]
-*[[upper bound]]
-*[[within bounds]]
+* [[boundary]]
+* [[least upper bound]]
+* [[lower bound]]
+* [[out of bounds]]
+* [[upper bound]]
+* [[within bounds]]
 
 ====Verb====
 {{en-verb}}
 
 # To [[surround]] a territory.
 #: ''Nebraska, Missouri, Oklahoma and Colorado bound Kansas.''
-*'''Usage notes:''' Tends to be used in passive voice, as ''Kansas is bounded by Nebraska on the north, Missouri on the east ...''.
+* '''Usage notes:''' Tends to be used in passive voice, as ''Kansas is bounded by Nebraska on the north, Missouri on the east ...''.
 
 ====Derived terms====
-*[[unbounded]]
-*[[boundless]]
+* [[unbounded]]
+* [[boundless]]
 
 ====Translations====
+{{rfc-level|Translations at L3+}}
 * Finnish: [[reunustaa]]
 * Swedish: {{t-|sv|gränsa till}}
 
@@ -80,12 +81,12 @@
 # A sizeable jump.
 #: ''The [[deer]] crossed the [[stream]] in a single '''bound'''.''
 
-====Translations====
+=====Translations=====
 {{trans-top|sizeable jump}}
 * [[Basque]]: {{t|eu|jauzi|xs=Basque}}, {{t-|eu|salto|xs=Basque}}
-* German: {{t+|de|Sprung|m}}
-{{trans-mid}}
 * Finnish: {{t-|fi|hyppy}}, {{t-|fi|loikka}}
+{{trans-mid}}
+* German: {{t+|de|Sprung|m}}
 * Swedish: [[hopp]] {{n}}, [[skutt]] {{n}}
 {{trans-bottom}}
 
@@ -96,9 +97,9 @@
 #: ''The rabbit bounded down the lane.''
 
 =====Derived terms=====
-*[[rebound]]
+* [[rebound]]
 
-====Translations====
+=====Translations=====
 * Finnish: [[hyppiä]], [[hypähdellä]]
 * Swedish: [[skutta]]
 
@@ -128,32 +129,32 @@ Alteration of ''[[boun]]'', with '''-d''' partly for [[euphonic]] effect and par
 
 {{trans-top|Constrained by something, or constrained to something}}
 * Danish: {{t|da|begrænset}}
-* Finnish: [[sidottu]]
 {{trans-mid}}
+* Finnish: [[sidottu]]
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Dutch}}: [[bestemd]] (voor)
+* {{ttbc|Dutch}}: [[bestemd]] (voor)
 {{checktrans-bottom}}
 
 =====Derived terms=====
-*[[bound for]]
-*[[eastbound]]
-*[[northbound]]
-*[[southbound]]
-*[[westbound]]
+* [[bound for]]
+* [[eastbound]]
+* [[northbound]]
+* [[southbound]]
+* [[westbound]]
 
 ===Related terms===
 <!--These need to be put under the according etymologies-->
-*[[bound in]]
-*[[bound to]]
-*[[bound state]]
-*[[bound up]]
-*[[hardbound]]
-*[[leaps and bounds]]
-*[[meets and bounds]]
-*[[softbound]]
-*[[inbound]]
+* [[bound in]]
+* [[bound to]]
+* [[bound state]]
+* [[bound up]]
+* [[hardbound]]
+* [[leaps and bounds]]
+* [[meets and bounds]]
+* [[softbound]]
+* [[inbound]]
 
 [[Category:Contranyms]]
 [[Category:English irregular past participles]]
