--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -4,12 +4,13 @@
 {{rank|authority|pleasant|forget|862|break|Roman|wise|watch}}
 
 ===Etymology===
-{{OE.}} ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
+{{etyl|ang}} {{term|brecan|lang=ang}}. Compare Dutch {{term|breken|lang=nl}}, German {{term|brechen|lang=de}}, and Gothic {{term|brikan|lang=got}}. Cognate with Latin {{term|frangere||to break}}.
+{{rfscript|Gothic}}
 
 ===Pronunciation===
 * {{enPR|/brāk/}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
 * {{audio|en-us-break.ogg|Audio (US)}}
-* Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
+* {{rhymes|eɪk}}
 
 ====Homophones====
 * [[brake]]
@@ -19,48 +20,53 @@
 
 # {{intransitive}} To [[end up]] in two or more [[piece]]s that can't easily be [[reassemble]]d.
 #: ''If the vase falls to the floor, it might '''break'''.''
-# {{intransitive}} {{medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
+# {{intransitive|medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
 #: ''Don't slip and '''break''' your leg.''
 # {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
 #: ''Don't '''break''' the fridge with your tools.''
 # {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
 #: ''Let's '''break''' for lunch.''
-# {{intransitive}} {{tennis}} To win a game as [[receiver]].
-# {{intransitive}} {{context|sports|billiards|snooker|pool}} To make the [[first]] [[shot]].
+# {{intransitive|tennis}} To win a game as [[receiver]].
+# {{intransitive|billiards|snooker|pool}} To make the [[first]] [[shot]].
 #: ''Is it your or my turn to '''break'''?''
 # {{transitive}} To [[cause]] to [[end up]] in two or more [[piece]]s.
 #: ''I am going to '''break''' your mask.''
-# {{transitive}} {{medicine}} {{ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
+# {{transitive|medicine|ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
 #: ''Don't try to '''break''' his neck.''
-# {{transitive}} {{medicine}} {{ergative}} Of a bone, to [[fracture]] accidentally.
+# {{transitive|medicine|ergative}} Of a bone, to [[fracture]] accidentally.
 #: ''Don't '''break''' your fingers playing basketball.''
-# {{transitive}} {{ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
+# {{transitive|ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
 #: ''Did you two '''break''' the trolley by racing with it?''
 # {{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].[[Image:A storm at Pors-Loubous.jpg|right|thumb|196px|A wave '''breaking''' (definition 13)]]
 #: ''You have to '''break''' an elephant before you can use it as an animal of burden.''
 #: ''America has used many forms of torture to '''break''' their POWs.''
 # {{transitive}} To do that which is [[forbid]]den by (a rule or rules).
 #: ''When you go to Vancouver, promise me you won't '''break''' the law.''
-# {{intransitive}} (''of a water wave'') To collapse into [[surf]], after arriving in [[shallow]] water.
-# {{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
+# {{intransitive|of a water wave}} To collapse into [[surf]], after arriving in [[shallow]] water.
+# {{transitive|gaming|_|slang}} To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
-# {{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
+# {{transitive|media|ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
+# {{context|of a storm or spell of|_|weather|UK}} to end
+#: ''The forecast says the hot weather will '''break''' by midweek''
+
+====Usage notes=====
+The sense relating to a spell of weather is most likely to be used after a period of persistent good or bad weather; it is rarely used to signify the end of changeable conditions.
 
 ====Synonyms====
-* {{i-c|intransitive: end up in two or more pieces}} [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
-* {{i-c|intransitive: of a bone}} [[crack]], [[fracture]]
-* {{i-c|intransitive: stop functioning}} [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
-* {{i-c|intransitive: interrupt}} [[interrupt]], [[pause]]
-* {{i-c|transitive: cause to end up in two or more pieces}} [[shatter]], [[smash]]
-* {{i-c|transitive: of a bone|intentionally}} [[crack]], [[fracture]]
-* {{i-c|transitive: of a bone|accidentally}} [[crack]], [[fracture]]
-* {{i-c|transitive: cause to malfunction or stop working altogether}} [[bust]]
-* {{i-c|transitive: cause a person or animal to lose his/her/its will}} [[subject]], [[tame]]
-* {{i-c|transitive: do that which is forbidden by}} [[contravene]], [[go against]], [[violate]]
+* {{sense|intransitive: end up in two or more pieces}} [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
+* {{sense|intransitive: of a bone}} [[crack]], [[fracture]]
+* {{sense|intransitive: stop functioning}} [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
+* {{sense|intransitive: interrupt}} [[interrupt]], [[pause]]
+* {{sense|transitive: cause to end up in two or more pieces}} [[shatter]], [[smash]]
+* {{sense|transitive: of a bone|intentionally}} [[crack]], [[fracture]]
+* {{sense|transitive: of a bone|accidentally}} [[crack]], [[fracture]]
+* {{sense|transitive: cause to malfunction or stop working altogether}} [[bust]]
+* {{sense|transitive: cause a person or animal to lose his/her/its will}} [[subject]], [[tame]]
+* {{sense|transitive: do that which is forbidden by}} [[contravene]], [[go against]], [[violate]]
 
 ====Antonyms====
-* {{i-c|intransitive: interrupt}} [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
-* {{i-c|transitive: cause to end up in two or more pieces}} [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
+* {{sense|intransitive: interrupt}} [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
+* {{sense|transitive: cause to end up in two or more pieces}} [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
 
 ====Derived terms====
 {{top3}}
@@ -346,6 +352,10 @@
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|UK, of a storm or spell of weather: to end}}
+{{trans-mid}}
+{{trans-bottom}}
+
 {{checktrans}}
 
 * {{ttbc|Chumash (Inezeño)}}: [[kʼot]]
@@ -357,24 +367,28 @@
 ===Noun===
 {{en-noun}}
 
-# {{countable}} An instance of breaking something into two pieces.
+# An instance of breaking something into two pieces.
 #: ''The femur has a clean '''break''' and so should heal easily.''
-# {{countable}} A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
+# A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
 #: ''The sun came out in a '''break''' in the clouds.''
-# {{countable}} A [[rest]] or [[pause]], usually from [[work]].
+# A [[rest]] or [[pause]], usually from [[work]].
 #: ''Let’s take a five-minute '''break'''.''
-# {{countable}} {{tennis}} (''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
-# {{countable}} {{context|billiards}} The first [[shot]] in a game of [[billiards]]
-# {{countable}} {{context|snooker}} The number of points scored by one player in one visit to the table
-# {{countable}} {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
+# {{tennis}} A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
+# {{billiards|snooker|pool}} The first [[shot]] in a game of [[billiards]]
+# {{snooker}} The number of points scored by one player in one visit to the table
+# {{surfing}} Place where [[wave]]s break (ie. pitch or spill forward creating white water).
 #: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
-# {{countable}} {{music}} A short section of music, often between verses, in which some performers stop while others continue.
+# {{music}} A short section of music, often between verses, in which some performers stop while others continue.
 #: ''The fiddle '''break''' was amazing, it was a pity the singer came back in on the wrong note.''
+# {{UK|weather}} a change; the end of a spell of persistent good or bad weather
+
+====Usage notes====
+# {{sense|music}} The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
 
 ====Synonyms====
-* {{i-c|instance of breaking something into two pieces}} [[split]]
-* {{i-c|physical space that opens up in something or between two things}} [[breach]], [[gap]], [[space]]
-* {{i-c|rest or pause|usually from work}} [[time out]]
+* {{sense|instance of breaking something into two pieces}} [[split]]
+* {{sense|physical space that opens up in something or between two things}} [[breach]], [[gap]], [[space]]
+* {{sense|rest or pause|usually from work}} [[time out]]
 
 ====Derived terms====
 * [[beach break]]
@@ -438,8 +452,9 @@
 {{trans-mid}}
 {{trans-bottom}}
 
-====Usage notes====
-# {{music}}. The instruments that are named are the ones that carry on playing, for example a '''fiddle break''' implies that the fiddle is the most prominent instrument playing during the break.
+{{trans-top|UK, weather: a change}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[Category:English ergative verbs]]
 [[Category:English homophones]]
