iwiki +lo <break#4566670>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -471,6 +471,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 [[io:break]]
 [[it:break]]
 [[ku:break]]
+[[lo:break]]
 [[hu:break]]
 [[nl:break]]
 [[ja:break]]
