--- a/en/w/West Frisian.741118.wikitext
+++ b/en/w/West Frisian.741118.wikitext
@@ -15,9 +15,9 @@ Some linguists consider West Frisian, Saterland Frisian, and North Frisian to be
 * Chinese:
 *: Mandarin: {{zh-ts|弗里西亞語|弗里西亚语}} ([[fú]][[lǐ]][[xī]][[yà]] [[yǔ]])
 * Dutch: {{t+|nl|Fries|n}}, {{t|nl|Westerlauwers Fries|n}}
-* Finnish: [[länsifriisi]]
+* Finnish: {{t|fi|länsifriisi}}
+* German: {{t|de|Friesisch|n}}
 {{trans-mid}}
-* German: [[Friesisch]] {{n}}
 * Italian: lingua frisone occidentale, lingua frisona occidentale (ad hoc)
 * Japanese: {{t|ja|フリジア語|tr=Furijia-go|sc=Jpan}}, {{t|ja|フリース語|tr=Furīsu-go|sc=Jpan}}
 * Polish: {{t|pl|zachodnio-fryzyjski|m}}
