--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -69,11 +69,9 @@
 ==Mandarin==
 
 ===Noun===
-{{cmn-noun|p|pin=CD|pint=cd|sim=CD}}
+{{cmn-noun|p|pin=CD|pint=cd|tas=CD}}
 
 # compact disk
-
-{{zh-attention}}
 
 ----
 
