header Derived terms to L4, header Related terms to L4 <rot#4576063>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -105,8 +105,8 @@ Latin [[ructus]]
 ==German==
 
 ===Pronunciation===
-*{{audio|De-rot.ogg|audio}}
-*{{IPA|[ʁoːt]}}
+* {{audio|De-rot.ogg|audio}}
+* {{IPA|[ʁoːt]}}
 
 ===Etymology===
 Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood]]''
@@ -117,7 +117,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 # [[red]]
 # {{context|politics|Germany|lang=de}} pertaining to the SPD (a large social democratic party in Germany)
 
-===Derived terms===
+====Derived terms====
 * [[rothaarig]]
 * [[Rotkehlchen]]
 * [[Rotstift]]
@@ -125,7 +125,7 @@ Old High German ''[[rōt]]'', akin to Old Saxon ''rōd'', compare Dutch ''[[rood
 * [[röten]]
 * [[Rötung]]
 
-===Related terms===
+====Related terms====
 * [[Rot]]
 
 [[Category:de:Colors]]
