/* Derived terms */ <bound#4579277>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -50,12 +50,17 @@
 {{checktrans-bottom}}
 
 =====Derived terms=====
+{{top3}}
 * [[boundary]]
+* [[boundless]]
 * [[least upper bound]]
+{{mid3}}
 * [[lower bound]]
 * [[out of bounds]]
 * [[upper bound]]
+{{mid3}}
 * [[within bounds]]
+{{bottom3}}
 
 ====Verb====
 {{en-verb}}
