/* Derived terms */ +1 <bound#4579281>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -70,8 +70,13 @@
 * '''Usage notes:''' Tends to be used in passive voice, as ''Kansas is bounded by Nebraska on the north, Missouri on the east ...''.
 
 ====Derived terms====
+{{top3}}
+* [[unbound]]
+{{mid3}}
 * [[unbounded]]
-* [[boundless]]
+{{mid3}}
+* [[rebound]]
+{{bottom3}}
 
 ====Translations====
 {{rfc-level|Translations at L3+}}
