/* Related terms */ <bubble#4585637>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -90,11 +90,12 @@ Partly imitative, also influenced by {{term|burble}}.
 * [[bubble team]]
 * [[boy in the bubble]]
 {{rel-bottom}}
-{{rel-top|terms etymologically related to "bubble" with the sense of "an enlarged area" "an enlarged amount of", "protruding mound", or "enswollen"}}
+{{rel-top|terms etymologically related to "bubble" with the sense of "an enlarged area", "an enlarged amount of", "protruding mound", or "enswollen"}}
 * [[bubole]]
 * [[bubule]]
 * [[bubo]]
 * [[boob]]
+* [[blubber]]
 * [[bubonic]]
 * [[breast]]
 * [[teat]]
