--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -107,7 +107,7 @@ Partly imitative, also influenced by {{term|burble}}.
 
 # {{intransitive}} To produce bubbles, to rise up in bubbles (such in foods cooking).
 # {{transitive|archaic}} To [[cheat]], [[delude]].
-# {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
+# {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]]. (see [[blubber]])
 
 ====Quotations====
 {{seeCites}}
