Reverted edits by [[Special:Contributions/216.221.122.205|216.221.122.205]] ([[User_talk:216.221.122.205|Talk]]); changed back to last version by [[User:Interwicket|Interwicket]] <bubble#4586907>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -90,27 +90,13 @@ Partly imitative, also influenced by {{term|burble}}.
 * [[bubble team]]
 * [[boy in the bubble]]
 {{rel-bottom}}
-{{rel-top|etymologically related terms with the sense of "an enlarged area (or amount)", "protruding mound", "enswollen", "round-like", or "excessive"}}
-* [[bubole]]
-* [[bubule]]
-* [[bubo]]
-* [[balb]]/[[bulb]]/[[bolb]]
-* [[ball]]/[[boll]]
-* [[bollock]]
-* [[boob]], [[booby]], [[bubby]]
-* [[blubber]], [[blabble]], [[babble]], [[babel]], [[blunder]]ous
-* [[bubonic]]
-* [[breast]]
-* [[teat]]
-* [[zit]]
-{{rel-bottom}}
 
 ===Verb===
 {{en-verb|bubbl|es}}
 
 # {{intransitive}} To produce bubbles, to rise up in bubbles (such in foods cooking).
 # {{transitive|archaic}} To [[cheat]], [[delude]].
-# {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]]. (see [[blubber]])
+# {{intransitive|Scotland|and|Northern England}} To [[cry]], [[weep]].
 
 ====Quotations====
 {{seeCites}}
