--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -19,6 +19,8 @@ From ''[[w:Nintendo|Nintendo Company, Limited]]'' (任天堂株式会社), the J
 #*: The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, ISBN 1740599748, page 34
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
+# A video game system made by Nintendo.
+#: ''Hey, [[Sean]], wanna play on my Nintendo after school?''
 
 ====Usage notes====
 This term may have trademark status.
