--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -5,10 +5,10 @@
 
 From ''[[w:Nintendo|Nintendo Company, Limited]]'' (任天堂株式会社), the Japanese manufacturer, from Japanese 任天堂 (Nintendō) “Luck of Heaven” or “Luck of the Angels”
 
-===Proper noun===
-{{en-proper noun}}
+===Noun===
+{{en-noun}}
 
-# [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
+# A [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
 #* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
