--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -3,12 +3,13 @@
 ===Etymology===
 {{rfd|what deserves mention in the etymology?}}
 
-From ''[[w:Nintendo|Nintendo Company, Limited]]'' (任天堂株式会社), the Japanese manufacturer, from Japanese 任天堂 (Nintendō) “Luck of Heaven” or “Luck of the Angels”
+From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japanese manufacturer, from Japanese {{term|lang=ja|任天堂|tr=Nintendō|Luck of Heaven}}.
 
 ===Noun===
 {{en-noun}}
 
-# A [[w:Nintendo Entertainment System|Nintendo Entertainment System]].
+# A [[w:Nintendo Entertainment System|Nintendo Entertainment System]], or other video game system made by Nintendo.
+#: ''Wanna play on my '''Nintendo''' after school?''
 #* '''1995''', David Gladstone, ed., ''British Social Welfare: Past, Present, and Future'', page 274
 #*: There is nothing wrong with the accoutrements of personal affluence, but if the numbers of personal stereos, '''Nintendos''', mobile phones and cars grow […].
 #* '''2005''', Lila Abu-Lughod, ''Dramas of Nationhood: The Politics of Television in Egypt'', page 280
@@ -19,8 +20,6 @@ From ''[[w:Nintendo|Nintendo Company, Limited]]'' (任天堂株式会社), the J
 #*: The only message at home was from my nephew, letting me know my mother was back home, safe and sound, except for a sore "'''Nintendo''' thumb".
 #* '''2007''', Anthony Ham and Alison Bing, ''Morocco'', Lonely Planet, ISBN 1740599748, page 34
 #*: He was far more interested in bullfighting, which was the '''Nintendo''' of the day, only considerably more dangerous<!--;-->
-# A video game system made by Nintendo.
-#: ''Hey, [[Sean]], wanna play on my Nintendo after school?''
 
 ====Usage notes====
 This term may have trademark status.
