iwiki +it <ferret#4588453>

--- a/en/f/ferret.8237.wikitext
+++ b/en/f/ferret.8237.wikitext
@@ -80,6 +80,7 @@ From {{OF.}} ''[[fuiret]]'' (modern ''[[furet]]'') < {{LL.}} ''[[furo]]'' ‘thi
 [[et:ferret]]
 [[fr:ferret]]
 [[io:ferret]]
+[[it:ferret]]
 [[hu:ferret]]
 [[ro:ferret]]
 [[ru:ferret]]
