--- a/en/b/bamboo.746517.wikitext
+++ b/en/b/bamboo.746517.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}},
+From {{etyl|nl|en}} {{term|bamboe|lang=nl}}, from {{etyl|pt|en}} {{term|bambu|lang=pt}}, from {{etyl|ms|en}} {{term|samambu|lang=ms}}.
 
 ===Pronunciation===
 *{{audio|en-us-bamboo.ogg|Audio (US)}}
