--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -56,6 +56,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 * Kurdish: {{KUchar|[[فو]]}}
 * Português: [[assoprar]]
 * Russian: [[дуть]] (dut') {{impf}}, [[дунуть]] (dúnut') {{pf}}; [[сморкаться]] (smorkát's'a) {{impf}}, [[сморкнуться]] (smorknút's'a) {{pf}} ''blow the nose''
+* Scottish Gaelic: [[séid]]
 * Slovene: [[pihati]]
 * Spanish: [[soplar]]
 * Vietnamese: [[thổi]]; [[phù]], [[phù phù]] (to blow on food)
