/* Adjective */ bold usex <metalliferous#4603308>

--- a/en/m/metalliferous.801832.wikitext
+++ b/en/m/metalliferous.801832.wikitext
@@ -4,7 +4,7 @@
 {{en-adj}}
 
 # {{metallurgy}} Containing a [[metal]]lic [[element]]. Often used to describe [[ore]]s that are mined commercially.
-#:''{{{2|Cassiterite is a metalliferous ore because it contains tin.}}}''
+#:''{{{2|Cassiterite is a '''metalliferous''' ore containing tin.}}}''
 
 [[vi:metalliferous]]
 [[zh:metalliferous]]
