--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -21,6 +21,7 @@
 * Czech: {{t-|cs|sázka|f}}
 * Dutch: [[weddenschap]] {{f}}
 * Finnish: {{t-|fi|veto}}
+*French: [[pari]]
 * German: {{t+|de|Wette|f}}
 * Greek: [[στοίχημα]] [ˈstiçiˌma] {{n}}
 * Hebrew: [[התערבות]] (hitarvut) {{f}}
