--- a/en/o/overline.775476.wikitext
+++ b/en/o/overline.775476.wikitext
@@ -10,6 +10,7 @@ Created by analogy to [[underline]].
 {{en-noun}}
 
 #A [[line]] drawn over text.
+#A [[line]] drawn over a repeating decimal.
 
 ===Verb===
 {{en-verb|overlines|overlining|overlined|overlined}}
