iwiki +lo <simple#4614709>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -146,9 +146,9 @@ From French ''simple'', from Latin ''[[simplex]]''
 # [[simpleton]], [[fool]]
 # ''(pharmacology, masculine)'' [[simple#English|simple]]
 
-[[an:simple]]
 [[ang:simple]]
 [[ar:simple]]
+[[an:simple]]
 [[et:simple]]
 [[el:simple]]
 [[es:simple]]
@@ -159,6 +159,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 [[it:simple]]
 [[kk:simple]]
 [[ku:simple]]
+[[lo:simple]]
 [[lt:simple]]
 [[hu:simple]]
 [[nl:simple]]
