--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -13,7 +13,7 @@
 {{wikipedia}}
 {{en-noun}}
 
-# A [[commercial]] [[solicitation]] designed to sell some [[commodity]], [[service]] or similar.
+# A [[commercial]] [[solicitation]] designed to sell some [[commodity]], [[service]] or similar; (US) [[commercial]].
 #: ''Companies try to sell their products using '''advertisements''' in form of placards, television spots and print publications.''
 # A [[public]] [[notice]].
 #: ''The city council placed an '''advertisement''' in the local newspaper to inform its residents of the forthcoming roadworks.''
