--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -108,6 +108,7 @@ Old English ''[[leþer]]''
 [[it:leather]]
 [[kk:leather]]
 [[hu:leather]]
+[[nl:leather]]
 [[pl:leather]]
 [[ru:leather]]
 [[simple:leather]]
