--- a/en/l/left ventricle.803579.wikitext
+++ b/en/l/left ventricle.803579.wikitext
@@ -5,3 +5,5 @@
 {{en-noun|sg=[[left]] [[ventricle]]}}
 
 #One of the four [[chamber]]s of the [[heart]] of humans and other mammmals, which receives [[oxygenated]] blood from the [[left atrium]] and pumps it out through the [[aorta]].
+
+[[ta:left ventricle]]
