iwiki +fy, lt, oc, uk <squirrel#4622866>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -122,10 +122,13 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (modern {{F.}} {{ter
 [[de:squirrel]]
 [[el:squirrel]]
 [[fr:squirrel]]
+[[fy:squirrel]]
 [[io:squirrel]]
 [[id:squirrel]]
 [[it:squirrel]]
+[[lt:squirrel]]
 [[hu:squirrel]]
+[[oc:squirrel]]
 [[pl:squirrel]]
 [[ru:squirrel]]
 [[fi:squirrel]]
@@ -133,4 +136,5 @@ From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (modern {{F.}} {{ter
 [[te:squirrel]]
 [[vi:squirrel]]
 [[tr:squirrel]]
+[[uk:squirrel]]
 [[zh:squirrel]]
