/* Translations */ missing language <bend#4627553>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -36,7 +36,6 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 * [[bend out of shape]]
 
 ====Translations====
-{{rfc-tsort|unparsed language line: *  t it curvare ,  t it piegare }}
 {{trans-top|to shape into a curve}}
 * Czech: {{t-|cs|ohnout}}
 * Dutch: {{t+|nl|buigen}}, {{t|nl|plooien}}
@@ -45,7 +44,7 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 * Hebrew: [[לכופף]] (le'khofef)
 * Hungarian: {{t+|hu|hajlít}}, {{t-|hu|görbít}}
 {{trans-mid}}
-* {{t|it|curvare}}, {{t|it|piegare}}
+* Italian: {{t|it|curvare}}, {{t|it|piegare}}
 * Kurdish: {{KUchar|[[چه‌ماندن]]}}
 * Slovene: [[upogniti]]
 * Spanish: {{t-|es|doblar}}, {{t-|es|curvar}}
