--- a/en/b/better late than never.746527.wikitext
+++ b/en/b/better late than never.746527.wikitext
@@ -8,32 +8,32 @@ The earliest record of the phrase ''better late than never'' comes from around 2
 '''[[better]] [[late]] than [[never]]'''
 
 # It's better to do something late, than to never do it at all.
-#*'''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
-#*:''Their insolence and recklessness must be opposed, and '''better late than never'''.''
+#* '''1996.''' Titus Livius (translation). ''Livy's History of Rome'' (in English):
+#*: ''Their insolence and recklessness must be opposed, and '''better late than never'''.''
 
 ====Translations====
 {{trans-top|it's better do do something late, than to never do it at all}}
-* {{sq}}: {{trad|sq|më mirë vonë se kurrë}}
-* {{ar}}: {{trad|ar|أن يأتي متأخراً خير من أن لا يأتي أبداً}}
-* {{eu}}: {{trad|eu|hobe da berandu sekula baino}}
-* {{br}}: {{trad|br|gwelloc'h diwezhat eget gwech ebet}}
-* {{cs}}: {{trad|cs|lepší pozdě než nikdy}}
-* {{da}}: {{trad|da|bedre sent end aldrig}}
-* {{nl}}: {{trad|nl|beter laat dan nooit}}
+* Albanian: {{t|sq|më mirë vonë se kurrë}}
+* Arabic: {{t|ar|أن يأتي متأخراً خير من أن لا يأتي أبداً}}
+* [[Basque]]: {{t|eu|hobe da berandu sekula baino}}
+* [[Breton]]: {{t|br|gwelloc'h diwezhat eget gwech ebet}}
+* Czech: {{t|cs|lepší pozdě než nikdy}}
+* Danish: {{t|da|bedre sent end aldrig}}
+* Dutch: {{t|nl|beter laat dan nooit}}
 {{trans-mid}}
-* {{eo}}: {{trad|eo|pli bone malfrue ol neniam}}
-* {{fr}}: {{trad|fr|mieux vaut tard que jamais}}
-* {{de}}: {{trad|de|besser spät als nie}}
-* {{it}}: {{trad|it|meglio tardi che mai}}
-* {{pt}}: {{trad|pt|antes tarde do que nunca}}
-* {{es}}: {{trad|es|más vale tarde que nunca|nunca es tarde si la dicha es buena}}
-* {{cy}}: {{trad|cy|gwell hwyr na hwyrach|gwell rhywbryd na byth}}
+* Esperanto: {{t|eo|pli bone malfrue ol neniam}}
+* French: {{t|fr|mieux vaut tard que jamais}}
+* German: {{t|de|besser spät als nie}}
+* Italian: {{t|it|meglio tardi che mai}}
+* Portuguese: {{t|pt|antes tarde do que nunca}}
+* Spanish: {{t|es|más vale tarde que nunca|nunca es tarde si la dicha es buena}}
+* Welsh: {{t|cy|gwell hwyr na hwyrach|gwell rhywbryd na byth}}
 {{trans-bottom}}
 
 ===References===
 <references/>
 
-[[Category:English idioms]]
 [[Category:English aphorisms]]
+[[Category:English idioms]]
 
 [[pl:better late than never]]
