iwiki +kk, ta <maximum#4630840>

--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -86,6 +86,7 @@ neutral of ''[[maximus]]''
 [[fr:maximum]]
 [[io:maximum]]
 [[id:maximum]]
+[[kk:maximum]]
 [[hu:maximum]]
 [[nl:maximum]]
 [[pl:maximum]]
@@ -93,6 +94,7 @@ neutral of ''[[maximus]]''
 [[simple:maximum]]
 [[fi:maximum]]
 [[sv:maximum]]
+[[ta:maximum]]
 [[te:maximum]]
 [[vi:maximum]]
 [[tr:maximum]]
