iwiki +kk, ta <minimum#4634166>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -59,6 +59,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 [[es:minimum]]
 [[fr:minimum]]
 [[io:minimum]]
+[[kk:minimum]]
 [[lt:minimum]]
 [[hu:minimum]]
 [[nl:minimum]]
@@ -66,6 +67,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 [[simple:minimum]]
 [[fi:minimum]]
 [[sv:minimum]]
+[[ta:minimum]]
 [[te:minimum]]
 [[vi:minimum]]
 [[tr:minimum]]
