--- a/en/m/missent.801182.wikitext
+++ b/en/m/missent.801182.wikitext
@@ -15,4 +15,5 @@
 # {{form of|[[third-person|Third-person]] [[plural]] [[imperfect subjunctive]]|mettre|lang=French}}
 
 [[fr:missent]]
+[[ta:missent]]
 [[zh:missent]]
