--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -72,6 +72,7 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * [[multiplier]]
 
 [[de:multiplication]]
+[[el:multiplication]]
 [[fr:multiplication]]
 [[io:multiplication]]
 [[id:multiplication]]
