--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -7,6 +7,9 @@
 # [[prisoner of war]]
 #:''After his capture he was taken to a camp for POWs.''
 
+==== Synonyms ====
+* [[PW]] {{qualifier|Canada|military}}
+
 ====Translations====
 ''Translations of the abbreviation appear below.  For translations of the full phrase, see [[prisoner of war]].''
 <!--Translate only the abbreviation here-->
