gender -''pl'' +{{p}} <POW#4647873>

--- a/en/p/POW.4325.wikitext
+++ b/en/p/POW.4325.wikitext
@@ -5,28 +5,29 @@
 '''POW''' (''plural'' '''[[POWs]]''')
 
 # [[prisoner of war]]
-#:''After his capture he was taken to a camp for POWs.''
+#: ''After his capture he was taken to a camp for POWs.''
 
-==== Synonyms ====
+====Synonyms====
 * [[PW]] {{qualifier|Canada|military}}
 
 ====Translations====
 ''Translations of the abbreviation appear below.  For translations of the full phrase, see [[prisoner of war]].''
 <!--Translate only the abbreviation here-->
 <!--
-*Chinese: [[战俘]]
-*Dutch: [[krijgsgevangene]]
-*German: [[Kriegsgefangener]] {{m}}
-*[[Interlingua]]: [[prisionere de guerra]]
-*Italian: [[prigioniero di guerra]] {{m}}
-*Norwegian: [[fange av krig]]
-*Polish: [[jeniec wojenny]] {{m}}
-*Portuguese: [[prisioneiro de guerra]]
-*Slovak: [[zajatec]] {{m}} (zajatci ''pl'')
-*Spanish: [[prisionero de guerra]]
-*Swedish: [[krigsfånge]]
-*[[Volapük]]: [[kligafanäböpäb]]
+* Chinese: [[战俘]]
+* Dutch: [[krijgsgevangene]]
+* German: [[Kriegsgefangener]] {{m}}
+* [[Interlingua]]: [[prisionere de guerra]]
+* Italian: [[prigioniero di guerra]] {{m}}
+* Norwegian: [[fange av krig]]
+* Polish: [[jeniec wojenny]] {{m}}
+* Portuguese: [[prisioneiro de guerra]]
+* Slovak: [[zajatec]] {{m}} (zajatci {{p}})
+* Spanish: [[prisionero de guerra]]
+* Swedish: [[krigsfånge]]
+* [[Volapük]]: [[kligafanäböpäb]]
 -->
 
 [[Category:Abbreviations]]
+
 [[tr:POW]]
