iwiki +ku, lo, oc <weight#4654233>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -165,9 +165,12 @@
 [[id:weight]]
 [[it:weight]]
 [[kk:weight]]
+[[ku:weight]]
+[[lo:weight]]
 [[hu:weight]]
 [[nl:weight]]
 [[ja:weight]]
+[[oc:weight]]
 [[pl:weight]]
 [[ru:weight]]
 [[simple:weight]]
