iwiki +de, et <whistle#4654730>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -133,6 +133,8 @@
 [[Category:1000 English basic words]]
 
 [[ar:whistle]]
+[[de:whistle]]
+[[et:whistle]]
 [[fa:whistle]]
 [[fr:whistle]]
 [[gl:whistle]]
