--- a/en/c/collective security.803561.wikitext
+++ b/en/c/collective security.803561.wikitext
@@ -1,8 +1,16 @@
 {{wikipedia}}
 ==English==
+
 ===Noun===
 {{en-noun|-}}
+
 #The concept of maintaining [[peace]] among all [[nation]]s or members of a group by making the [[security]] concerns of one member important to all members.
 
-===Related terms===
-#[[collective defence]]/[[collective defense|se]]
+====Related terms====
+# [[collective defence]]/[[collective defense|se]]
+
+====Translations====
+{{top}}
+* Finnish: [[kollektiivinen]] {{t|fi|turvallisuus}}
+{{mid}}
+{{bottom}}
