--- a/en/p/periostracum.741502.wikitext
+++ b/en/p/periostracum.741502.wikitext
@@ -14,5 +14,6 @@ Literally "surrounding shell," from {{prefix|peri|ostracum}}.
 *[[periostracal]]
 
 [[id:periostracum]]
+[[ta:periostracum]]
 [[vi:periostracum]]
 [[zh:periostracum]]
