--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -40,6 +40,7 @@ Old English ''[[leþer]]''
 * Korean: [[가죽]] (gajug, -juk)
 * Lithuanian: [[oda]] {{f}}
 * [[Malayalam]]: [[തോല്‍]] (thOl)
+* Polish: [[skóra]] {{f}}
 * Portuguese: [[couro]] {{m}}
 * Russian: [[кожа]] (kóža) {{f}}
 * Serbian:
