iwiki +lt <polecat#4664972>

--- a/en/p/polecat.8236.wikitext
+++ b/en/p/polecat.8236.wikitext
@@ -76,6 +76,7 @@ Middle French ''[[pole]]'' [[hen]] + [[cat]] because of its fondness for poultry
 [[Category:Mammals]]
 
 [[io:polecat]]
+[[lt:polecat]]
 [[ru:polecat]]
 [[fi:polecat]]
 [[te:polecat]]
