alt form <four score seven years ago#4665314>

--- a/en/f/four score seven years ago.803553.wikitext
+++ b/en/f/four score seven years ago.803553.wikitext
@@ -1,2 +1,6 @@
 ==English==
-{{alternative form of|four score and seven years ago}}
+
+===Adverb===
+{{en-adv|[[four [[score]] and seven years [[ago]]}}
+
+# {{alternative form of|[[four score and seven years ago]]}}
