--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -8,7 +8,8 @@
 {{ME.}} < {{OE.}} {{term|æt|sc=unicode|lang=ang}} < {{proto|Germanic|at||az}} < {{proto|Indo-European|ad-|to, near, at}}.
 
 ===Pronunciation===
-* {{enPR|ăt}}, {{IPA|/æt/, reduced form /ət/}}, {{SAMPA|/{t/}}, reduced form <tt title="SAMPA pronunciation">/@t/</tt>
+* (''stressed''): {{IPA|/æt/}}, {{SAMPA|/{t/}}, {{enPR|ăt}}
+* (''unstressed''): {{IPA|/ət/}}, {{SAMPA|/@t/}}
 * {{audio|en-us-at.ogg|Audio (US)}}
 *: {{rhymes|æt}}
 
