--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -2,18 +2,18 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/ˈbεt/}}
-*{{SAMPA|/"bEt/}}
-*{{audio|en-us-bet.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-ɛt|-ɛt]]
+* {{IPA|/ˈbεt/}}
+* {{SAMPA|/"bEt/}}
+* {{audio|en-us-bet.ogg|Audio (US)}}
+* Rhymes: [[Rhymes:English:-ɛt|-ɛt]]
 
 ===Noun===
 {{en-noun}}
 
 # A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forcast the outcome of an event.
 # A degree of [[certainty]].
-#:''It’s a good '''bet''' that it will rain tomorrow.''
-#:''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
+#: ''It’s a good '''bet''' that it will rain tomorrow.''
+#: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
 # {{rfv-sense}} Also a slang word for "Alright" and "O.k". First used by the rapping  platypus  vampires of Ireland.
 
 ====Translations====
@@ -42,8 +42,8 @@
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Wu}}:
-*:Suzhou dialect: [[ruán-tondæ]]
+* {{ttbc|Wu}}:
+*: Suzhou dialect: [[ruán-tondæ]]
 {{trans-bottom}}
 
 ===Verb===
@@ -55,6 +55,7 @@
 # {{poker}} To place money into the [[pot]] in order to require others do the same, usually only used for the first person to place money in the pot on each round.
 
 ====Translations====
+{{rfc-tsort|duplicate language: Greek}}
 {{trans-top|To make a guess about the outcome of an event}}
 * Czech: [[vsadit]], [[vsadit]] se
 * [[Breton]]: [[klaoustreañ]]
@@ -78,18 +79,18 @@
 {{trans-top|To be sure of something}}
 * Czech: [[vsadit]] se
 * Dutch: [[er op kunnen rekenen]]
-{{trans-mid}}
 * Latvian: [[būt]] [[pārliecināts|pārliecinātam]]
+{{trans-mid}}
 * Polish: {{t|pl|stawiać na}}
 * Slovak: [[staviť]] sa
 {{trans-bottom}}
 
 {{checktrans-top}}
-*{{ttbc|Dutch}}: [[van op aan kunnen]]
-*{{ttbc|Indonesian}}: [[taruh|bertaruh]]
-*{{ttbc|Latvian}}: [[nosaukt]] [[likme|likmi]]
-*{{ttbc|Wu}}:
-*:Suzhou dialect: [[ruánl tondæ]]
+* {{ttbc|Dutch}}: [[van op aan kunnen]]
+* {{ttbc|Indonesian}}: [[taruh|bertaruh]]
+* {{ttbc|Latvian}}: [[nosaukt]] [[likme|likmi]]
+* {{ttbc|Wu}}:
+*: Suzhou dialect: [[ruánl tondæ]]
 {{trans-bottom}}
 
 [[Category:Betting]]
@@ -109,7 +110,7 @@
 ===Declension===
 {{crh-latin-noun|niñ|ke|ni|te|ten}}
 
-=== Synonyms ===
+===Synonyms===
 * [[yüz]] (face)
 
 ===References===
@@ -130,6 +131,7 @@
 
 ==Esperanto==
 {{rfv}}
+
 ===Noun===
 '''bet'''
 
