iwiki +et, sv <again#4684851>

--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -126,6 +126,7 @@
 
 [[ar:again]]
 [[de:again]]
+[[et:again]]
 [[el:again]]
 [[fr:again]]
 [[ko:again]]
@@ -144,6 +145,7 @@
 [[ru:again]]
 [[simple:again]]
 [[fi:again]]
+[[sv:again]]
 [[ta:again]]
 [[te:again]]
 [[th:again]]
