--- a/en/a/advertisement.4312.wikitext
+++ b/en/a/advertisement.4312.wikitext
@@ -5,7 +5,7 @@
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ədˈvɜːtɪsmənt/}}, {{SAMPA|/@d"v3:tIsm@nt/}}
-* {{a|US}} {{IPA|/ˌædvɚˈtaɪzmənt/}}, {{SAMPA|/%{dv@`"taIzm@nt/}}
+* {{a|US}} {{IPA|/ˈædvɚˌtaɪzmənt/}}, {{SAMPA|/{"dv@`%taIzm@nt/}}
 * {{audio|en-us-advertisement.ogg|Audio (US)}}
 * Hyphenation: ad·ver·tise·ment
 
