{{infl|en|adjective}} <multi-million#4704444>

--- a/en/m/multi-million.34079.wikitext
+++ b/en/m/multi-million.34079.wikitext
@@ -8,7 +8,7 @@ MOHL-tee-MIL-li-hun
 Latin [[multi]] + [[million]]
 
 ===Adjective===
-'''multi-million'''
+{{infl|en|adjective}}
 # Having more than 2,000,000 but less than a billion.
 
 ===Translations===
