--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -10,6 +10,8 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 # A longtime wargamer, particularly one concerned with game mechanics, historical accuracy and realism.
 ----
 
+Possible acronym: Gritty realism over gaming norms; and realistic deaths.
+
 ==French==
 
 ===Noun===
