--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -14,20 +14,20 @@
 [[Image:Music-staff.png|thumb|right|100px|A musical staff.]]
 
 # ''(plural:'' '''staffs''' ''or'' '''staves''''')''  a [[long]], [[straight]] [[stick]], especially one used to assist in walking.
-# ''(plural:'' '''staves''''')'' a [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
-# ''(plural:'' '''staff''''')'' the [[employee]]s of a [[business]]. (e.g. The company employed 10 new staff this month.)
+# ''(plural:'' '''staves''''')'' {{music}} A [[series]] of [[horizontal]] [[line]]s on which [[music]]al [[note]]s are written.
+# ''(plural:'' '''staff''''')'' The [[employee]]s of a [[business]]. (e.g. The company employed 10 new staff this month.)
 #{{uncountable}} A mixture of [[plaster]] and [[fibre]] used as a temporary exterior wall covering (see [[w:Staff (building material)]])
 
 ====Synonyms====
-* [[stave]] (2)
-* [[personnel]] (3)
+* {{sense|music}} [[stave]]
+* {{sense|employees}} [[personnel]]
 
 ====Related terms====
 * [[member of staff]]
 * [[quarterstaff]]
 
 ====Translations====
-{{trans-top|a long, straight stick}}
+{{trans-top|long, straight stick}}
 * Croatian: [[štap]] {{m}}
 * Dutch: [[:nl:staf|staf]] {{m}}
 * Finnish: [[sauva]]
@@ -41,7 +41,7 @@
 * Spanish: [[bastón]] {{m}}, [[báculo]] {{m}}
 {{trans-bottom}}
 
-{{trans-top|a series of horizontal lines}}
+{{trans-top|series of horizontal lines}}
 * Dutch: [[:nl:balk|balk]] {{m}}, [[:nl:notenbalk|notenbalk]] {{m}}
 * Finnish: [[nuottiviivasto]]
 * French: [[portée]] {{f}}
@@ -51,7 +51,7 @@
 * Spanish: [[varas]] {{f|p}}
 {{trans-bottom}}
 
-{{trans-top|the employees of a business}}
+{{trans-top|employees of a business}}
 * Danish: [[stav]] {{c}}; [[stang]] {{c}}; [[stab]] {{c}}, [[personale]] {{n}}
 * Dutch: [[:nl:medewerkers|medewerkers]] {{m|p}}
 * Finnish: [[henkilökunta]]
