/* Noun */ +Czech <zoophile#4725941>

--- a/en/z/zoophile.802731.wikitext
+++ b/en/z/zoophile.802731.wikitext
@@ -6,7 +6,13 @@
 # A person sexually attracted by [[animal]]s.
 
 ====Related terms====
-*[[zoophilia]]
+* [[zoophilia]]
+
+====Translations====
+{{trans-top|person sexually attracted by animals}}
+* Czech: [[zoofil]] {{m}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[fr:zoophile]]
 [[pl:zoophile]]
