--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -36,7 +36,7 @@
 
 =====Translations=====
 {{trans-top|grinding apparatus or the building housing it}}
-* Arabic: {{Arab|[[مطحنة]]}}
+* Arabic: {{Arab|[[مطحنة]]}} {{IPAchar|(máʈħana)}} {{f}}
 * Bosnian: [[mlin]] {{m}}
 * Croatian: [[mlin]] {{m}}
 * Dutch: [[molen]] {{m}}
@@ -49,40 +49,44 @@
 * Hebrew: {{he-translation|טחנה|tachánah}}
 * Hungarian: [[malom]]
 * Italian: [[mulino]] {{m}}
+* Japanese: [[製粉所]] (せいふんじょ, seifun jo)
+* Korean: [[방아]] (bang-a); [[방앗간]] (bang-atgan) (''the building'')
 {{trans-mid}}
-* Korean: [[방아]] (bangA); [[방앗간]] (bangAsgan, BangAt-) (''for building'')
 * Kurdish: {{KUchar|[[ئاش]]}}
 * Norwegian: [[mølle]] {{m}}
 * [[Old High German]]: [[mulin]] {{f}}
 * Polish: [[młyn]] {{m}}
 * Portuguese: [[moenda]] {{f}}, [[moinho]] {{m}}
+* Russian: {{t|ru|мельница|tr=mél’nitsa|f}}
 * Serbian:
 *: Cyrillic: [[млин]] {{m}}
 *: Roman: [[mlin]] {{m}}
-* Slovenian: [[mlin]] {{m}}
+* Slovene: [[mlin]] {{m}}
 * Spanish: [[molino]] {{m}}
+* Swedish: {{t|sv|kvarn|c}}
 * Turkish: [[değirmen]]
 {{trans-bottom}}
 
 {{trans-top|manufacturing plant}}
-* Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
+* Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel''), [[textielfabriek]] (''for textiles'')
 * Finnish: [[tehdas]]
-* French: [[manufacture]] {{f}}
+* French: {{t|fr|manufacture|f}}
 * German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
 * Hebrew: {{he-translation|טחנה|tachánah}}
 {{trans-mid}}
 * Norwegian: [[mølle]] {{m}}
 * Polish: [[fabryka]] {{f}}
 * Portuguese: [[fábrica]] {{f}}, [[manufatura]] {{f}}
-* Spanish: [[fabrica]] {{f}}
+* Russian: {{t|ru|фабрика|tr=fábrika|f}}, {{t|ru|завод|tr=zavód|m}}
+* Spanish: {{t|es|fabrica|f}}
 * Turkish: [[fabrika]]
 {{trans-bottom}}
 
 {{trans-top|building}}
-* Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel'') [[textielfabriek]] (''for textiles'')
+* Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel''), [[textielfabriek]] (''for textiles'')
 * Finnish: [[tehdas]], [[tehdasrakennus]]
-* French: [[manufacture]] {{f}}
-* German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general'') [[Papiermühle]] {{f}} (''for paper'')
+* French: {{t|fr|manufacture|f}}
+* German: [[Fabrik]] {{f}} (''general''), [[Werk]] {{n}} (''general''), [[Papiermühle]] {{f}} (''for paper'')
 {{trans-mid}}
 * Hebrew: {{he-translation|טחנה|tachánah}}
 * Norwegian: [[mølle]] {{m}}, [[fabrikk]] {{m}} (''general'')
