--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -142,6 +142,7 @@ From the noun ''mill''
 * Finnish: [[jauhaa]]
 {{trans-mid}}
 * French: [[moudre]]
+* Russian: {{t|ru|молоть|sc=Cyrl|tr=molót'}} {{impf}}, {{t|ru|смолоть|sc=Cyrl|tr=smolót'}} {{pf}}
 {{trans-bottom}}
 
 {{trans-top|shape, polish, etc, using a machine}}
