--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -14,6 +14,9 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 # {{transitive}} To cause (something) to change its shape into a [[curve]], by [[physical]] [[force]], [[chemical]] action, or any other means.
 #* ''If you '''bend''' the pipe too far, it will break.''
 #* ''Don’t '''bend''' your knees.''
+# {{transitive and intransitive}} To force or be forced to submit.
+#* "They '''bent''' me to their will."
+#* "I am '''bending''' to my desire to eat junk food."
 # {{context|transitive|nautical}} To [[tie]], as in [[securing]] a line to a [[cleat]]; to [[shackle]] a [[chain]] to an [[anchor]]; make [[fast]].
 #* '''''Bend''' the sail to the yard.''
 # {{context|transitive|music}} To smoothly change the pitch of a note.
@@ -24,8 +27,7 @@ From {{ME.}} {{term|benden}} < {{OE.}} {{term|bendan}} to bind or bend (a bow).
 #* ''To bow properly, '''bend''' at the waist.''
 # {{intransitive}} To change direction.
 #* ''The road '''bends''' to the right''
-# {{intransitive}} (Of pressure, encouragement or an urge) To give in to.
-#* "I'm beginning to '''bend''' to my desire to eat junk food."
+
 
 ====Derived terms====
 * [[bend down]]
