iwiki +simple <weasel#4765513>

--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -139,6 +139,7 @@ The word ''weasel'' is the direct descendant of {{OE.}} ''[[wesule]]'', ''[[wesl
 [[pl:weasel]]
 [[pt:weasel]]
 [[ru:weasel]]
+[[simple:weasel]]
 [[fi:weasel]]
 [[te:weasel]]
 [[vi:weasel]]
