/* Translations */ +Czech <mill#4770668>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -39,6 +39,7 @@
 * Arabic: {{Arab|[[مطحنة]]}} {{IPAchar|(máʈħana)}} {{f}}
 * Bosnian: [[mlin]] {{m}}
 * Croatian: [[mlin]] {{m}}
+* Czech: [[mlýn]] {{m}}
 * Dutch: [[molen]] {{m}}
 * [[Erzya]]: [[ведьгев]] (vedgev)
 * Estonian: [[veski]]
