[[Category:Goats]] <she-goat#4780732>

--- a/en/s/she-goat.802749.wikitext
+++ b/en/s/she-goat.802749.wikitext
@@ -11,6 +11,6 @@
 {{trans-mid}}
 * Old Church Slavonic: {{tø|cu|коза|f|tr=koza|sc=Cyrl|xs=Old Church Slavonic}}
 {{trans-bottom}}
-
+[[Category:Goats]]
 [[fr:she-goat]]
 [[hu:she-goat]]
