--- a/en/r/Raine.774576.wikitext
+++ b/en/r/Raine.774576.wikitext
@@ -12,7 +12,7 @@
 ===Proper noun===
 {{fi-noun|proper=true}}
 
-# {{given name|male||fi:}}.
+# {{given name|male|lang=fi}}.
 
 [[sr:Raine]]
 [[fi:Raine]]
