template -ttbc-bottom +checktrans-bottom, template -ttbc-mid +checktrans-mid, template -ttbc-top +checktrans-top <species#4785082>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -42,7 +42,7 @@
 * Swedish: {{t+|sv|art|c}}
 {{trans-bottom}}
 
-{{ttbc-top}}
+{{checktrans-top}}
 * [[Catalan]]: [[espècie]], {{f}}
 * Chinese: [[種]], [[种]] (zhǒng); [[類]], [[类]] (lèi); [[種類]], [[种类]] (zhǒnglèi)
 * Danish: [[art]] {{c}}
@@ -53,7 +53,7 @@
 * Hungarian: [[fajta]] (1), [[faj]] (2,3)
 * Indonesian: [[spesies]], [[jenis]]
 * [[Interlingua]]: [[specie]]
-{{ttbc-mid}}
+{{checktrans-mid}}
 * Italian: [[specie]] {{f}}, (plural: [[speci]])
 * Lithuanian: [[rūšis]] {{f}}
 * Polish: [[gatunek]] {{m}}
@@ -62,7 +62,7 @@
 * Slovene: [[vrsta]] {{f}}
 * Spanish: [[especie]] {{f}}
 * Swedish: [[art]] {{c}}
-{{ttbc-bottom}}
+{{checktrans-bottom}}
 
 ===See also===
 * [[family]]
