--- a/en/b/BX.4329.wikitext
+++ b/en/b/BX.4329.wikitext
@@ -5,12 +5,11 @@
 * Rhymes: [[Rhymes:English:-ěx|-ěx]]
 
 ===Etymology 1===
-{{rfe}}
 
 ====Initialism====
-'''B.X.''' or '''BX'''
+'''BX'''
 
-# '''Base Exchange''' of the U.S. [[Air Force]].
+# {{US|military}} [[Base Exchange]] of the U.S. [[Air Force]].
 #: ''Despite the reduced price of goods at the '''BX''', everything is of high quality''.
 
 ===Etymology 2===
@@ -27,6 +26,3 @@ Former trademark of General Electric Company.
 =====Related terms=====
 * [[electrical cable]]
 * [[power cable]]
-
-[[Category:Abbreviations, acronyms and initialisms]]
-[[Category:Military]]
