canonical cats <amai#4810765>

--- a/en/a/amai.4232.wikitext
+++ b/en/a/amai.4232.wikitext
@@ -1,4 +1,5 @@
 ==Dutch==
+
 ===Interjection===
 '''amai'''
 
@@ -7,26 +8,33 @@
 ----
 
 ==Italian==
+
 ===Verb form===
 '''amai'''
+
 # ''first-person singular indicative past historic of [[amare]]''
+
 [[Category:Italian verb forms]]
 
 ----
 
 ==Japanese==
+
 ===Adjective===
 {{ja-adj|r|decl=い|hira=あまい}}
+
 # [[甘い]]: [[sweet]]
 
 ----
 
 ==Sicilian==
+
 ===Verb===
 '''amai'''
+
 # ''[[first person singular]] [[preterite]] [[active voice|active]] [[indicative mood|indicative]] of'' '''[[amari#Sicilian|amari]]
 
-[[category:Sicilian verb forms]]
+[[Category:Sicilian verb forms]]
 
 [[fr:amai]]
 [[fi:amai]]
