--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -1,7 +1,7 @@
 ==French==
 
 ===Etymology===
-From the Latin ''[[quattuordecim]]'' meaning fourteen.
+From {{etyl|la|fr}} {{term|quattuordecim|lang=la}}.
 
 ===Pronunciation===
 *{{audio|Fr-quatorze.ogg|audio}}
@@ -22,6 +22,12 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 ----
 
 ==Portuguese==
+
+===Alternative forms===
+* [[catorze]]
+
+===Etymology===
+From {{etyl|la|pt}} {{term|quattuordecim|lang=la}}.
 
 ===Cardinal number===
 '''quatorze'''
