/* French */ + ety <seize#4811070>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -62,6 +62,9 @@
 
 ==French==
 
+===Etymology===
+From {{etyl|la|fr}} {{term|sedecim|sēdecim|lang=la}}.
+
 ===Pronunciation===
 *{{audio|Fr-seize.ogg|audio}}
 
