{{infl|en|adjective}} <multicolor#4811641>

--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -6,13 +6,13 @@
 MOHL-tee-koh/kuh-luhr
 
 ===Etymology===
-Latin [[multi]] + [[color]]
+{{L.}} {{prefix|multi|color}}
 
 ===Alternative spellings===
 * (''Chiefly Canadian, Australian, Jamaican, British, International'') [[multicolour]]
 
 ===Adjective===
-'''multicolor'''  (''Chiefly American'')
+{{infl|en|adjective}}  (''Chiefly American'')
 <!-- mul*ti-co*lored '''p.p''', mul*ti-co*lo-ring -->
 # Having, resembling, or pertaining to many or a world of colors.
 
